--- a/WebApp/Views/Company/_AddCompanyModal.cshtml
+++ b/WebApp/Views/Company/_AddCompanyModal.cshtml
@@ -4,7 +4,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addCompanyModalLabel">Add Company</h5>
+                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="addCompanyModalLabel">Add Company</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -50,12 +50,12 @@
             </div>
             <div class="modal-footer flex space-x-2">
                 <button type="button"
-                        class="flex-1 rounded bg-gray-500 px-4 py-2 font-semibold text-white hover:bg-gray-600"
+                        class="min-w-[128px] rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]"
                         data-dismiss="modal">
                     Cancel
                 </button>
                 <button type="submit"
-                        class="flex-1 rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]"
+                        class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A04747]"
                         onclick="submitAddCompany()">
                     Add
                 </button>
