--- a/WebApp/Views/Job/ViewJob.cshtml
+++ b/WebApp/Views/Job/ViewJob.cshtml
@@ -29,9 +29,9 @@
     <div class="mb-2 w-full justify-between">
         <div class="w-full rounded-lg bg-white p-6 px-12 shadow-sm">
             <div class="flex justify-between">
-                <a href="#" id="back-button" class="flex items-center text-xs font-semibold text-[#7A1515] hover:text-[#A04747] hover:!no-underline">
+                <button type="button" id="back-button" class="flex items-center text-xs font-semibold text-[#7A1515] hover:text-[#A04747] focus:!outline-none">
                     <i class="fas fa-arrow-left mr-2"></i> Back
-                </a>
+                </button>
             </div>
 
             <div class="flex justify-between">
