--- a/WebApp/Views/Home/_FeaturedJobs.cshtml
+++ b/WebApp/Views/Home/_FeaturedJobs.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Services.ServiceModels.JobViewModel>
+﻿@model List<Services.ServiceModels.FeaturedJobsViewModel>
 @using Humanizer;
 
 @{
@@ -23,27 +23,27 @@ else
 {
     <div>
         <!-- Container aligned to the parent content -->
-                <div class="flex space-x-4 min-w-max py-2">
+                <div class="flex min-w-max space-x-4 py-2">
                     @foreach (var job in Model)
                     {
                         <div onclick="location.href='@Url.Action("GetJob", "Job", new { id = job.JobId })'"
-                             class="min-w-[300px] cursor-pointer rounded-xl bg-white shadow-md transition-shadow duration-300 hover:shadow-lg p-4">
+                             class="min-w-[300px] cursor-pointer rounded-xl bg-white p-4 shadow-md transition-shadow duration-300 hover:shadow-lg">
                             <!-- Company -->
-                            <div class="font-semibold text-xs text-gray-600">
-                                <span>@(job.Company?.Name)</span>
+                            <div class="text-xs font-semibold text-gray-600">
+                                <span>@(job.CompanyName)</span>
                             </div>
 
                             <!-- Location, Employment Type, and Work Setup -->
-                            <div class="font-normal text-xs text-gray-600 pt-2">
+                            <div class="pt-2 text-xs font-normal text-gray-600">
                                 <i class="fas fa-map-marker-alt pr-1 text-sm"></i>
                                 @job.Location
-                                <span class="ml-1 rounded-md px-2 py-1 text-xs font-medium text-gray-900 border"
-                                      style="background-color:@GetEmploymentTypeColor(job.EmploymentType?.Name);">
-                                    @(job.EmploymentType?.Name)
+                                <span class="ml-1 rounded-md border px-2 py-1 text-xs font-medium text-gray-900" 
+                                    style="background-color:@GetEmploymentTypeColor(job.EmploymentTypeName);">
+                                    @(job.EmploymentTypeName)
                                 </span>
                                 <span class="ml-1 rounded-md border px-2 py-1 text-xs font-normal text-gray-900"
                                       style="border: 2px solid;">
-                                    @(job.SetupType?.Name)
+                                    @(job.SetupTypeName)
                                 </span>
                             </div>
 
@@ -63,7 +63,7 @@ else
                                 {
                                     @foreach (var skill in job.Skills)
                                     {
-                                        <span class="rounded-full border px-2 py-1 text-gray-500 text-xs">@skill.Name</span>
+                                        <span class="rounded-full border px-2 py-1 text-xs text-gray-500">@skill.Name</span>
                                     }
                                 }
                                 else
@@ -75,7 +75,7 @@ else
                             <!-- Job Match Percentage -->
                             <div class="mt-2 flex items-center space-x-1 text-sm font-semibold text-gray-700">
                                 <span class="pr-1 text-xs font-bold">Job Match:</span>
-                                <span class="rounded-full border border-red-500 px-2 py-1 text-xs text-green-600">85%</span>
+                                <span class="rounded-full border border-red-500 px-2 py-1 text-xs text-green-600">@job.MatchPercentage%</span>
                             </div>
                         </div>
                     }
