--- a/WebApp/Views/Job/_JobMatchesTable.cshtml
+++ b/WebApp/Views/Job/_JobMatchesTable.cshtml
@@ -13,20 +13,32 @@
         {
             <thead class="border-0 sticky rounded-md bg-gray-100 text-sm">
                 <tr>
-                    <th class="px-6 py-3 text-left uppercase tracking-wider text-[#625f5f]">Applicant</th>
-                    <th class="px-6 py-3 text-left uppercase tracking-wider text-[#625f5f]">Match</th>
+                    <th class="w-2/5 px-6 py-3 text-left uppercase tracking-wider text-[#625f5f]">Applicant</th>
+                    <th class="w-2/5 px-6 py-3 text-left uppercase tracking-wider text-[#625f5f]">Match</th>
+                    <th class="w-1/5 px-6 py-3 text-left uppercase tracking-wider text-[#625f5f]"></th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model)
-                {
+                {                         
                     <tr class="border-b text-sm text-[#343131] hover:bg-gray-50">
-                        <td class="whitespace-nowrap px-6 py-4 hover:cursor-default">
-                            @item.User.User.FirstName @item.User.User.LastName<br />
-                            @item.User.User.Email
+                        <td class="flex flex-col whitespace-nowrap px-6 py-4 hover:cursor-default">
+                            <div class="font-medium text-[#A04747]">
+                                @item.User.User.FirstName @item.User.User.LastName
+                            </div>
+                            <div class="font-light">
+                                @item.User.User.Email
+                            </div>
+                        </td>
+                        <td class="whitespace-nowrap px-6 py-4 font-medium text-[#625f5f] hover:cursor-default">
+                            @item.MatchPercentage %
                         </td>
                         <td class="whitespace-nowrap px-6 py-4 text-[#625f5f]">
-                            @item.MatchPercentage %
+                            <a href="#"
+                               class="view-details font-semibold hover:!no-underline hover:text-[#A04747]"
+                               data-id="@item.UserId">
+                                View Details
+                            </a>
                         </td>
                     </tr>
                 }
