--- a/WebApp/Views/Job/_ApplicantDetailsModal.cshtml
+++ b/WebApp/Views/Job/_ApplicantDetailsModal.cshtml
@@ -1,4 +1,4 @@
-﻿@model Data.Dtos.ApplicantDto
+﻿@model Data.Dtos.ApplicantViewDto
 
 <div class="mx-auto mb-3 overflow-auto rounded-lg bg-white shadow-md">
     <!-- Contact Details Section -->
