--- a/WebApp/Views/Job/ViewJob.cshtml
+++ b/WebApp/Views/Job/ViewJob.cshtml
@@ -105,9 +105,9 @@
     </div>
 
     <!--MAIN CONTENT W/SIDEBAR-->
-    <div class="flex flex-grow">
+    <div class="flex flex-grow overflow-hidden">
         <!-- Job Listings Section -->
-        <div class="mr-2 w-full rounded-lg border border-gray-200 bg-white p-6 shadow-sm">
+        <div class="mr-2 w-full overflow-auto rounded-lg border border-gray-200 bg-white p-6 shadow-sm">
             <h2 class="mb-2 pl-4 text-2xl font-bold text-gray-500">Job Details</h2>
 
             <!-- Main Content -->
