--- a/WebApp/Views/Job/_InfoTab.cshtml
+++ b/WebApp/Views/Job/_InfoTab.cshtml
@@ -16,7 +16,7 @@
     }
 }
 
-<div class="rounded-lg border border-gray-200 bg-white p-6 shadow-md">
+<div class="overflow-auto rounded-lg border border-gray-200 bg-white p-6 shadow-md">
     <div class="flex items-center justify-between pb-2 text-sm font-normal">
         <div>
             <i class="fas fa-map-marker-alt pr-1 text-sm"></i>
