--- a/WebApp/Views/Application/InfoTab.cshtml
+++ b/WebApp/Views/Application/InfoTab.cshtml
@@ -18,9 +18,14 @@
 
 <div class="rounded-lg border border-gray-200 bg-white p-6 shadow-md">
     <div class="flex items-center justify-between pb-2 text-sm font-normal">
-        <div>
-            <i class="fa-solid fa-percent pr-1 text-sm"></i>
-            Match Percent
+        <div class="font-semibold">
+            @{
+                var match = Model.Job.JobApplicantMatches.FirstOrDefault(j => j.UserId == Model.ApplicantId);
+                var percentage = match == null ? "Unavailable" : match.MatchPercentage.ToString() + "%";
+                var scale = match.MatchPercentage;
+                var color = scale < 60 ? "text-red-500" : scale >= 60 && scale <= 80 ? "text-orange-500" : "text-green-500";
+            }
+            Match: <span class="@(color) font-medium">@percentage</span>
         </div>
         <div class="ml-2">
             <a href="@Url.Action("GetJob", "Job", new { id = Model.JobId })"
