--- a/WebApp/Views/Job/ViewJob.cshtml
+++ b/WebApp/Views/Job/ViewJob.cshtml
@@ -228,7 +228,7 @@
                         })
                         .catch(error => {
                             console.error('Error:', error);
-                            alert('An error occurred while loading the applicant details.');
+                            toastr.error('An error occurred while loading the applicant details.');
                         });
                 });
             });
