--- a/WebApp/Views/Job/IndexApplicant.cshtml
+++ b/WebApp/Views/Job/IndexApplicant.cshtml
@@ -151,7 +151,7 @@
                                         {
                                             foreach(var skill in job.Skills)
                                             {
-                                               <span class="rounded-full border px-2 py-1 text-xs text-gray-500">@skill.Name.ToUpper()</span> 
+                                               <div class="pb-2"><span class="rounded-full border px-2 py-1 text-xs text-gray-500">@skill.Name.ToUpper()</span> </div>
                                             }
                                         }
                                         else
