--- a/WebApp/Views/Application/ViewApplication.cshtml
+++ b/WebApp/Views/Application/ViewApplication.cshtml
@@ -26,24 +26,35 @@
                     <div class="flex justify-between space-x-4 p-2">
                         @if (User.IsInRole("Applicant"))
                         {
-                            <!-- Withdraw -->
-                            <button class="flex items-center justify-center rounded-lg px-4 py-2 transition-all text-white bg-[#7A1515] hover:bg-[#991b1b] hover:text-white"
-                                    id="withdrawButton"
-                                    data-action-url="@Url.Action("WithdrawApplication", "Application")"
-                                    onclick="withdrawApplicationHandler('@Model.ApplicationId')">
-                                Withdraw Application
-                            </button>
-                        }
-                        else if (User.IsInRole("Recruiter") && string.Equals(userId, Model.Job.PostedById))
-                        {
-                            <!-- Update Status -->
-                            <button class="btn-primary flex items-center justify-center rounded-lg px-4 py-2 transition-all hover:bg-[#991b1b] hover:text-white"
-                                    data-toggle="modal"
-                                    data-target="#">
-                                <i class="fa-solid fa-arrows-rotate pr-2"></i> Update Status
-                            </button>
-                        }
-                    </div>
+                            @if (Model.ApplicationStatusType.Name == "Withdrawn")
+                                    {
+                                        <!-- Re-Apply -->
+                                        <button onclick="applyJobHandler('@Model.JobId')"
+                                                class="flex items-center justify-center rounded-lg bg-[#7A1515] px-4 py-2 text-white transition-all hover:bg-[#991b1b]">
+                                            <i class="fa-regular fa-paper-plane pr-1"></i> Apply Again
+                                        </button>
+                                    }
+                                    else
+                                    {
+                                        <!-- Withdraw -->
+                                        <button class="flex items-center justify-center rounded-lg px-4 py-2 transition-all text-white bg-[#7A1515] hover:bg-[#991b1b] hover:text-white"
+                                                id="withdrawButton"
+                                                data-action-url="@Url.Action("WithdrawApplication", "Application")"
+                                                onclick="withdrawApplicationHandler('@Model.ApplicationId')">
+                                            Withdraw Application
+                                        </button>
+                                    }
+                                }
+                                else if (User.IsInRole("Recruiter") && string.Equals(userId, Model.Job.PostedById))
+                                {
+                                    <!-- Update Status -->
+                                    <button class="btn-primary flex items-center justify-center rounded-lg px-4 py-2 transition-all hover:bg-[#991b1b] hover:text-white"
+                                            data-toggle="modal"
+                                            data-target="#">
+                                        <i class="fa-solid fa-arrows-rotate pr-2"></i> Update Status
+                                    </button>
+                                }
+                            </div>
                 </div>
 
                 <!-- Applicant Name and Date Updated -->
@@ -61,7 +72,7 @@
     </div>     
 
     <!-- Main Content with Sidebar -->
-    <div class="max-h-[calc(96vh-250px)] mx-auto mt-6 flex max-w-7xl gap-6 px-6">
+    <div class="max-h-auto mx-auto mt-6 flex max-w-7xl gap-6 px-6">
         <!-- Messages Section -->
         <div class="w-full rounded-lg border border-gray-200 bg-white p-6 shadow-sm">
             <h2 class="mb-4 pl-4 text-2xl font-bold text-gray-500">Chat History</h2>
