--- a/WebApp/Views/Job/_UpdateStatusModal.cshtml
+++ b/WebApp/Views/Job/_UpdateStatusModal.cshtml
@@ -12,7 +12,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="updateJobStatusModalLabel">Update Status</h5>
+                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="updateJobStatusModalLabel">Update Job Status</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closeUpdateJobStatusModal">
                     <span aria-hidden="true">&times;</span>
                 </button>
