--- a/WebApp/Views/Application/ViewApplication.cshtml
+++ b/WebApp/Views/Application/ViewApplication.cshtml
@@ -6,7 +6,6 @@
 @{
     ViewData["Title"] = $"{Model.Job.Title} Application | GradSync";
     var userId = ViewBag.UserId;
-    string aspAction = "GetAllApplications";
 }
 
 <div class="flex flex-col bg-gray-100 @(User.IsInRole("Applicant") ? "my-20  max-w-7xl max-h-screen mx-auto" : "size-full")">
@@ -92,28 +91,11 @@
         </div>
 
         <!-- Sidebar -->
-        @await Html.PartialAsync("InfoTab", Model)
+        @await Html.PartialAsync("_InfoTab", Model)
     </div>
 </div>
 
-<!-- Modal -->
-<div class="modal fade" id="applicantDetailsModal" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title text-[#343131]">
-                    Applicant Details
-                </h5>
-                <button type="button" class="close" data-dismiss="modal">
-                    <span>&times;</span>
-                </button>
-            </div>
-            <div class="modal-body mt-2 py-1 pl-4 text-[#343131]" id="applicantDetailsModalContent">
-                <!-- Content will be loaded here -->
-            </div>
-        </div>
-    </div>
-</div>
+@await Html.PartialAsync("_ApplicantDetailsModal")
 
 <!-- TempData for Notifications -->
 <div id="tempDataContainer" data-success="@TempData["SuccessMessage"]" data-error="@TempData["ErrorMessage"]"></div>
