--- a/WebApp/Views/Application/_UpdateStatusModal.cshtml
+++ b/WebApp/Views/Application/_UpdateStatusModal.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Data.Models
 @{
     bool isAdmin = User.IsInRole("Admin") || User.IsInRole("NLO");
-    var applicationStatusType = ViewBag.ApplicationStatusType as List<ApplicationStatusType>;
+    var applicationStatusType = ViewBag.AppStatusTypes as List<ApplicationStatusType>;
 
     if (applicationStatusType == null || !applicationStatusType.Any())
     {
@@ -16,17 +16,19 @@
     }
 }
 <div class="modal fade" id="updateApplicationStatusModal" tabindex="-1" role="dialog" aria-labelledby="updateApplicationStatusModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="updateApplicationStatusModalLabel">Update Application Status</h5>
+            <div class="modal-header border-0">
+                <h5 class="modal-title text-[#343131]" id="updateApplicationStatusModalLabel">
+                    Update Status
+                </h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closeUpdateJobStatusModal">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
 
-            <div class="modal-body max-h-[calc(96vh-200px)] flex-grow overflow-y-auto">
-                <form id="updateApplicationStatusForm" class="rounded-lg p-2" method="post" action="@Url.Action("UpdateApplicationStatus", "Application")">
+            <div class="modal-body mt-2 py-1 pl-4 text-[#343131]">
+                <form id="updateApplicationStatusForm" class="rounded-lg p-2">
                     @Html.AntiForgeryToken()
                     <div class="space-y-6">
                         <div class="flex-1">
@@ -44,9 +46,9 @@
                 </form>
             </div>
 
-            <div class="modal-footer">
-                <button type="button" class="rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" id="cancelUpdateApplicationStatus" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A53D3D]" onclick="submitUpdateApplicationStatus">Update</button>
+            <div class="modal-footer mt-2 !border-none">
+                <button type="button" class="min-w-[128px] rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" id="cancelUpdateApplicationStatus" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A04747]" onclick="submitUpdateApplicationStatus">Update</button>
             </div>
         </div>
     </div>
