--- a/WebApp/Views/Application/_ApplicationTableBody.cshtml
+++ b/WebApp/Views/Application/_ApplicationTableBody.cshtml
@@ -66,6 +66,11 @@ else
                     </div>
                 </td>
 
+                <!-- Match Percentage -->
+                <td class="px-2 py-3 text-xs text-gray-700">
+                    @item.Job.JobApplicantMatches.FirstOrDefault(jam => jam.UserId == item.ApplicantId)?.MatchPercentage.ToString()%
+                </td>
+
                 <!-- Applicant's program | FILTER -->
                 <td class="cursor-pointer px-2 py-3 text-xs text-gray-700" title="@applicantProgram.Name">
                     @applicantProgram.ProgramId
@@ -105,6 +110,11 @@ else
                         </a>
                     </div>
                 </td>
+                <!-- Match Percentage -->
+                <td class="px-6 py-3 text-xs text-gray-700">
+                    @item.Job.JobApplicantMatches.FirstOrDefault(jam => jam.UserId == item.ApplicantId)?.MatchPercentage.ToString()%
+                </td>
+
                 <!-- Company details | FILTER -->
                 <td class="px-6 py-3 text-sm font-semibold text-[#7A1515]">
                     @company.Name
